[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sbl-prior-normalization"
version = "0.1.0"
description = "Prior-normalizing transport maps for sparse Bayesian learning (Python)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.20,<3",
  "scipy>=1.7",
  "matplotlib>=3.4",
  "pylops>=2.0",
]

[project.optional-dependencies]
dev = [
  "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
